# somer

./: .env.example  .gitignore  .telegram_bot_runner.py  BOOT.md  CHANGELOG.md  CLAUDE.md  IDENTITY.md  Makefile  README.md  SOUL.md  TOOLS.md  USER.md  briefing.sh  entry.py  gcal_check.py  google_tasks_auth.py  manage_authorized.py  manage_whatsapp_users.py  notify_tg.py  notify_wa.py  pyproject.toml  security_rpt.py  update_config.py
.claude/: settings.local.json
agents/: __init__.py  agent_command.py  auth_profiles.py  cognitive_layer.py  compaction.py  context_window.py  credential_interceptor.py  data_analyst.py  decision_engine.py  messaging.py  model_fallback.py  planning.py  pre_action.py  proactive_alerts.py  prompt_builder.py  researcher.py  runner.py  schema.py  subagent.py
browser/: automation.py
channels/: pairing.py  plugin.py  registry.py  routing.py
cli/: agent_cmd.py  app.py  channels_cmd.py  config_cmd.py  cron_cmd.py  doctor_cmd.py  gateway_cmd.py  memory_cmd.py  onboard_cmd.py  pairing_cmd.py  plugin_cmd.py  secret_cmd.py  skill_cmd.py
config/: __init__.py  default.json5  help.py  loader.py  runtime_overrides.py  schema.py
context_engine/: base.py  default.py  registry.py  smart.py
cron/: __init__.py  isolated_runner.py  parser.py  run_log.py  scheduler.py
cybersecurity/: __init__.py  evidence.py  exploits.py  exploits_advanced.py  orchestrator.py  remediation.py  report.py  scanners.py  scanners_advanced.py  types.py  utils.py  workspace.py
docs/: README.md
gateway/: bootstrap.py  protocol.py  server.py  session_utils.py
hooks/: __init__.py  internal.py  loader.py  session_synthesis.py
infra/: __init__.py  env.py  file_lock.py  gateway_processes.py  heartbeat.py  net.py  os_info.py  path_safety.py  ports.py  restart_sentinel.py  runtime_status.py  secure_random.py  session_cost.py  state_migrations.py  system_events.py
media/: pipeline.py
memory/: __init__.py  auto_learner.py  embedding_models.py  embeddings.py  episodic.py  hybrid.py  lessons.py  manager.py  sqlite_backend.py
plugins/: __init__.py  contracts.py  installer.py  lifecycle.py  loader.py  manifest.py  registry.py  runtime.py  sdk.py  types.py
providers/: aliases.py  anthropic.py  base.py  bedrock.py  claude_code.py  deepseek.py  google.py  groq.py  huggingface.py  minimax.py  mistral.py  moonshot.py  nvidia.py  ollama.py  openai.py  openrouter.py  perplexity.py  qianfan.py  registry.py  sglang.py  together.py  venice.py  vllm.py  volcengine.py  xai.py
reports/: generators.py  manager.py  types.py
routing/: __init__.py  binding.py  keys.py  router.py  ttl.py
scripts/: start_whatsapp_webhook.sh
secrets/: __init__.py  apply.py  collectors.py  detector.py  patterns.py  refs.py  resolve.py  rotation.py  store.py  validation.py
security/: audit.py  scanner.py
self_improve/: __init__.py  engine.py  learner.py  paths.py  tools.py
sessions/: __init__.py  events.py  manager.py  persistence.py  routing.py
shared/: constants.py  errors.py  protocols.py  types.py
skills/: loader.py  registry.py  validator.py
somer_hybrid/: Cargo.toml  pyproject.toml
somer_taskqueue/: Cargo.toml
somer_taskqueue/src/: lib.rs
tasks/: __init__.py  handlers.py  manager.py  tools.py
tests/: conftest.py
tts/: engine.py
web_search/: providers.py
(+251 files in other folders)
