[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "somer"
version = "2.0.0-alpha"
description = "System for Optimized Modular Execution & Reasoning"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "SOMER Team" }]
keywords = ["ai", "llm", "automation", "agents", "cognitive-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "rich>=13.0.0",
    "typer[all]>=0.9.0",
    "cryptography>=42.0.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
providers = [
    "anthropic>=0.18.0",
    "openai>=1.10.0",
    "google-generativeai>=0.4.0",
]
channels = [
    "python-telegram-bot>=21.0",
    "slack-bolt>=1.18.0",
    "discord.py>=2.3.0",
]
memory = [
    "sqlite-vec>=0.1.0",
]
security = [
    "dnspython>=2.4.0",
]
all = [
    "somer[providers]",
    "somer[channels]",
    "somer[memory]",
    "somer[security]",
    "json5>=0.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "json5>=0.9.0",
]

[project.scripts]
somer = "entry:main"

[project.urls]
Homepage = "https://github.com/somer-ai/somer"
Documentation = "https://github.com/somer-ai/somer/docs"
Repository = "https://github.com/somer-ai/somer"

[tool.hatch.build.targets.wheel]
packages = [
    "agents",
    "channels",
    "cli",
    "config",
    "context_engine",
    "gateway",
    "hooks",
    "infra",
    "memory",
    "plugins",
    "providers",
    "secrets",
    "security",
    "sessions",
    "shared",
    "skills",
    "cybersecurity",
    "reports",
]

[tool.hatch.build.targets.sdist]
include = [
    "/agents",
    "/channels",
    "/cli",
    "/config",
    "/context_engine",
    "/gateway",
    "/hooks",
    "/infra",
    "/memory",
    "/plugins",
    "/providers",
    "/secrets",
    "/security",
    "/sessions",
    "/shared",
    "/skills",
    "/cybersecurity",
    "/reports",
    "/entry.py",
]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
