[package]
name = "somer_taskqueue"
version = "0.1.0"
edition = "2021"

[lib]
name = "somer_taskqueue"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
redis = "0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
